--- a/FinPlan.Web/Components/Pages/DrawDownRetirementPlanner.razor
+++ b/FinPlan.Web/Components/Pages/DrawDownRetirementPlanner.razor
@@ -1,4 +1,4 @@
-﻿@page "/retirement-drawdown"
+﻿@page "/retirement-drawdown-old"
 @using System.ComponentModel.DataAnnotations
 @using FinPlan.Shared.Models
 @using FinPlan.Shared.Models.Savings
