--- a/FinPlan.Web/Components/Pages/DrawDownRetirementPlannerCalendar.razor
+++ b/FinPlan.Web/Components/Pages/DrawDownRetirementPlannerCalendar.razor
@@ -1,4 +1,4 @@
-@page "/retirement-drawdown-calendar"
+@page "/retirement-drawdown"
 @using Microsoft.AspNetCore.Components
 @using System.Collections.Generic
 @using FinPlan.Web.Components
