--- a/FinPlan.Web/Components/Layout/MainLayout.razor
+++ b/FinPlan.Web/Components/Layout/MainLayout.razor
@@ -218,11 +218,11 @@
                 <span>Cost of Living Projection</span>
             </NavLink>
 
-            <NavLink class="menu-link" href="/retirement-drawdown-calendar">
+          @*   <NavLink class="menu-link" href="/retirement-drawdown-calendar">
                 <span class="step-badge" aria-hidden="true">4</span>
                 <span class="bi bi-calendar" aria-hidden="true"></span>
                 <span>Retirement - New</span>
-            </NavLink>  
+            </NavLink>   *@
 
             <NavLink class="menu-link" href="/wealth-building">
                 <span class="step-badge" aria-hidden="true">2</span>
